# Hand-gesture-mouse-control

./: CMakeLists.txt  face.cpp
